feat(product): crud product
