# internal/model/product/response/list/list.go
@@ -1,0 +1,11 @@
+package list
+
+import (
+	"api-estoque/internal/model/product"
+)
+
+type ListResponse struct {
+	Status   int                `json:"-"`
+	Msg      string             `json:"-"`
+	Products *[]product.Product `json:"products"`
+}
